# ragebait

./: .gitignore  Containerfile  README.md  config.yaml.example  frontend.py  main.py  pyproject.toml
assets/models/: default.yaml  schema.json
client/: client.py
