[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragebait"
version = "0.0.1"
description = "Reddit bot framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
  "praw",
  "streamlit",
  "python-dotenv",
  "pyyaml",
]

[project.scripts]
run-bot = "ragebait.main:main"
